--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -8,8 +8,8 @@ http {
     sendfile on;
     server {
         listen 80;
-        server_name www.wjh001.com;
-        location ~*^.+$ {
+        server_name *.wjh001.com;
+        location ~*^/(graphql|api|downloads|WeixinInterface|status|graphiql)(/.+)?$ {
             proxy_pass http://127.0.0.1:8080;
         }
     }
